# reskin-pipeline

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt  vercel.json
api/: index.py
examples/: alice_wonderland.yaml  dracula_gothic.yaml  little_mermaid.yaml  robin_hood.yaml  skin_config.yaml  wizard_of_oz.yaml
reskin/: __init__.py  baker.py  cli.py  config.py  consistency.py  extractor.py  generator.py  packager.py  utils.py
templates/plugin/: ReskinLoader.uplugin
templates/plugin/Source/ReskinLoader/: ReskinLoader.Build.cs  ReskinLoaderModule.cpp  ReskinLoaderModule.h
web/api/: jobs.py  main.py  models.py
web/frontend/: .env.example  index.html  package.json  vercel.json
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: CreateJobForm.jsx  JobCard.jsx  JobDetail.jsx
web/frontend/src/hooks/: useApi.js
